Justify option fix #41

--- a/wallabag/html-ressources/article.html
+++ b/wallabag/html-ressources/article.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="main.css" media="all" id="main-theme">
 		<link rel="stylesheet" href="ratatouille.css" media="all" id="extra-theme">
+        <link rel="stylesheet" href="%@" media="all" id="justify-theme">
 	</head>
 		<div id="main">
 			<body>
