--- a/wallabag/html-ressources/article.html
+++ b/wallabag/html-ressources/article.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="main.css" media="all" id="main-theme">
 		<link rel="stylesheet" href="ratatouille.css" media="all" id="extra-theme">
         <link rel="stylesheet" href="%@" media="all" id="justify-theme">
+        <link rel="stylesheet" href="%@.css" media="all" id="article-theme">
 	</head>
 		<div id="main">
 			<body>
