Wip custom font size

--- a/wallabag/html-ressources/article.html
+++ b/wallabag/html-ressources/article.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta charset="utf-8">
     <link rel="stylesheet" href="ratatouille.css" media="all" id="extra-theme">
     <link rel="stylesheet" href="main.css" media="all" id="main-theme">
