use javascript to remove srcset fix #323

--- a/wallabag/html-ressources/article.html
+++ b/wallabag/html-ressources/article.html
@@ -14,5 +14,11 @@
           </div>
         </div>
     </div>
+    <script>
+        var imgs = document.getElementsByTagName("img");
+        for (var i = 0; i < imgs.length; i++) {
+            imgs[i].removeAttribute("srcset");
+        }
+    </script>
   </body>
 </html>
