--- a/iOS/html-ressources/article.html
+++ b/iOS/html-ressources/article.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="ratatouille.css" media="all" id="extra-theme">
     <link rel="stylesheet" href="main.css" media="all" id="main-theme">
     <link rel="stylesheet" href="%@" media="all" id="justify-theme">
+    <script src="Readability.js"></script>
   </head>
   <body>
     <div id="main">
@@ -19,6 +20,9 @@
         for (var i = 0; i < imgs.length; i++) {
             imgs[i].removeAttribute("srcset");
         }
+
+        var article = new Readability(document).parse();
+        document.getElementById("article").innerHTML = article.content;
     </script>
   </body>
 </html>
